modules/gdscript/tests/scripts/analyzer/errors/nullable_qualifier_forbidden_for_native_types.gd
func test():
    var input: InputMap? = InputMap # Should error
